# learning_gui

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: learning_gui.launch
resources/: tiago_learn_gripper.ui  tiago_learn_hand.ui
scripts/: control_mode_management.py  learning_gui.py
